[tool.poetry]
name = "winapps"
version = "0.2.0"
description = "Python library for managing installed applications on Windows"
authors = ["Roman Inflianskas <infroma@gmail.com>"]
license = "Apache-2.0"
readme = "README.md"
repository = "https://github.com/rominf/winapps"
keywords = ["library", "windows", "apps", "applications", "programs", "management"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Win32 (MS Windows)",
    "Intended Audience :: Developers",
    "Intended Audience :: System Administrators",
    "Operating System :: Microsoft :: Windows",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: System :: Software Distribution",
    "Topic :: System :: Systems Administration"
]

[tool.poetry.dependencies]
python = "^3.6"
dataclasses = {version = "^0.6.0",python = "~3.6"}
plumbum = "^1.6"

[tool.poetry.dev-dependencies]
pytest = "^4.4"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
